--- a/index.html
+++ b/index.html
@@ -253,6 +253,8 @@
                     <a href="">Chocolate is loved</a>
                 </li>
             </ul>
+            <button type="button">Enter your email</button>
+            <button type="button">Subscribe</button>
         </nav>
     </footer>
 </body>
