--- a/index.html
+++ b/index.html
@@ -139,31 +139,35 @@
         <section class="section-four">
             <div class="container">
                 <h2 class="section-four-chapter">hOW IT’S <span>made?</span></h2>
-                <img class="section-four-img" src="img/image-min.png" alt="" width="600" height="400">
-                <h3 class="four-chapter">Try our chocolates today and discover the perfect balance of flavor</h3>
-                <ul class="section-four-list">
-                    <li class="section-four-item">
-                        <p class="section-four-tex">Heat the milk in a saucepan without bringing it to a boil. Add sugar and
-                            cocoa powder.</p>
-                    </li>
-                    <li class="section-four-item">
-                        <p class="section-four-tex">At the same time, prepare a water bath. Melt the butter on it.</p>
-                    </li>
-                    <li class="section-four-item">
-                        <p class="section-four-tex">"Mix" the milk mixture and already liquid butter. Mix thoroughly with a
-                            silicone spatula so that
-                            the mass becomes
-                            uniform and silky.</p>
-                    </li>
-                    <li class="section-four-item">
-                        <p class="section-four-tex">Heat the mixture over low heat, letting it barely boil.</p>
-                    </li>
-                    <li class="section-four-item">
-                        <p class="section-four-tex">Pour the chocolate into special containers (can be replaced with ice
-                            molds). Allow to cool and
-                            harden.</p>
-                    </li>
-                </ul>
+                <div class="made-rap">
+                    <img class="section-four-img" src="img/image-min.png" alt="" width="600" height="400">
+                    <div class="made-content">
+                        <h3 class="four-chapter">Try our chocolates today and discover the perfect balance of flavor</h3>
+                        <ul class="section-four-list">
+                            <li class="section-four-item">
+                                <p class="section-four-tex">Heat the milk in a saucepan without bringing it to a boil. Add sugar and
+                                    cocoa powder.</p>
+                            </li>
+                            <li class="section-four-item">
+                                <p class="section-four-tex">At the same time, prepare a water bath. Melt the butter on it.</p>
+                            </li>
+                            <li class="section-four-item">
+                                <p class="section-four-tex">"Mix" the milk mixture and already liquid butter. Mix thoroughly with a
+                                    silicone spatula so that
+                                    the mass becomes
+                                    uniform and silky.</p>
+                            </li>
+                            <li class="section-four-item">
+                                <p class="section-four-tex">Heat the mixture over low heat, letting it barely boil.</p>
+                            </li>
+                            <li class="section-four-item">
+                                <p class="section-four-tex">Pour the chocolate into special containers (can be replaced with ice
+                                    molds). Allow to cool and
+                                    harden.</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="section-five">
